--- a/style.css
+++ b/style.css
@@ -171,3 +171,35 @@ ul li a:hover {
     -webkit-text-fill-color: transparent;
     transition: 1s;
 }
+
+
+/*------------------jquary---------------------*/
+
+
+/*------------------mobile----------------------*/
+
+@media only screen and (max-width:688px) {
+    .header-title {
+        font-size: 2rem;
+    }
+    .i-am {
+        font-size: 0.8em;
+    }
+    .contact-me-btn {
+        padding: 6px 10px;
+        transition: 1s;
+    }
+    .container {
+        padding: 0px;
+        margin: 0px;
+    }
+    .HHH {
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+
+/*----------------tablat--------------*/
+
+@media only screen and (min-width: 600px) and (max-width:992px) {}
